integration/watch/basic/test_files/valid-text/public_api.ts
export { PrimaryAngularComponent } from './src/primary.component';
export { PrimaryAngularModule } from './src/primary.module';
export const title = 'foo bar';
