integration/watch/basic/test_files/invalid-type/public_api.ts
export { PrimaryAngularComponent } from './src/primary.component';
export { PrimaryAngularModule } from './src/primary.module';
export const title: boolean = 'foo bar';
